# sma-tracker

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: main.rs
src/errors/: app_error.rs
src/models/: finance_data.rs  mod.rs  telegram_commands.rs  yahoo_finance.rs
src/services/: mod.rs  sma_service.rs  telegram.rs
src/utils/: logging.rs
tests/: integration_tests.rs
