[package]
name = "sma-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = "0.14.0"
log = "0.4"
thiserror = "2.0"
env_logger = "0.11.6"
teloxide = { version = "0.17", features = ["macros"] }

[dev-dependencies]
wiremock = "0.6"